--- a/ai-projects.html
+++ b/ai-projects.html
@@ -794,7 +794,7 @@
                     <li>🎵 Музыка</li>
                     <li>🎨 Визуальные проекты</li>
                 </ul>
-                <a href="detalnaya-stranica-2.html" class="info-block-button">Подробнее</a>
+                <a href="ai-dlya-uchenikov.html" class="info-block-button">Подробнее</a>
             </div> 
 
             <!-- БЛОК 2 (синий фон) -->
@@ -1232,6 +1232,7 @@
 
 
          
+
 
 
 
