--- a/music-projects.html
+++ b/music-projects.html
@@ -916,25 +916,43 @@ function closeRestoreNotification() {
     }
 }
 </script>
-            <!-- Метаданные плейлиста -->
-            <div class="author-meta">
-                <strong>Автор:</strong> © А.Ю.Дёмин, 2025<br>
-                <strong>Инструменты:</strong> Perplexity AI, Claude AI, Suno AI<br>
-                <strong>Формат:</strong> MP3<br>
-                <strong>Примечание:</strong> При копировании ссылка на источник обязательна<br>
-                <button onclick="clearMusicPlayerState()" 
-                        style="margin-top: 10px;
-                               padding: 8px 16px;
-                               background: var(--color-danger);
-                               color: white;
-                               border: none;
-                               border-radius: 6px;
-                               cursor: pointer;
-                               font-size: 0.9rem;">
-                    🔄 Сбросить состояние плейера
-                </button>
-            </div>    
           
+          <!-- Метаданные плейлиста -->
+            <div class="author-meta">
+                <div style="display: flex; justify-content: space-between; align-items: start; gap: 2rem; flex-wrap: wrap;">
+                    <div style="flex: 1; min-width: 200px;">
+                        <strong>Автор:</strong> © А.Ю.Дёмин, 2025<br>
+                        <strong>Инструменты:</strong> Perplexity AI, Claude AI, Suno AI<br>
+                        <strong>Формат:</strong> MP3<br>
+                        <strong>Примечание:</strong> При копировании ссылка на источник обязательна
+                    </div>
+                    <div style="flex-shrink: 0;">
+                        <button onclick="clearMusicPlayerState()" 
+                                style="padding: 8px 16px;
+                                       background: var(--color-danger);
+                                       color: white;
+                                       border: none;
+                                       border-radius: 6px;
+                                       cursor: pointer;
+                                       font-size: 0.9rem;
+                                       transition: background 0.3s ease;"
+                                onmouseover="this.style.background='#C62828'"
+                                onmouseout="this.style.background='var(--color-danger)'">
+                            🔄 Сбросить состояние плейера
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+✅ Результат:
+
+✅ Кнопка справа на одной линии с первой строкой текста
+✅ Текст слева занимает всё доступное пространство
+✅ На мобильных кнопка переносится вниз (flex-wrap)
+✅ Добавлен hover-эффект (темнеет при наведении)
+
+
+Теперь кнопка расположена справа! 🎨RetryClaude can make mistakes. Please double-check responses.
         </div>
         
     </main>
@@ -2163,6 +2181,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
