--- a/index.html
+++ b/index.html
@@ -1150,6 +1150,9 @@ section h2 {
         <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
     </ul>
 </li>
+
+    <a href="Interactive.html" onclick="return handleSubmenuClick(event, this)">Отзывы о сайте</a>
+                     
 </ul>          
             </div>
         </nav>
@@ -1925,6 +1928,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
