--- a/index.html
+++ b/index.html
@@ -1151,8 +1151,9 @@ section h2 {
     </ul>
 </li>
 
-    <a href="Interactive.html" onclick="return handleSubmenuClick(event, this)">Отзывы о сайте</a>
-                     
+                      <li class="has-submenu">
+     <a href="Interactive.html" onclick="return handleSubmenuClick(event, this)">Отзывы о сайте</a>
+            <ul class="submenu">          
 </ul>          
             </div>
         </nav>
@@ -1928,6 +1929,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
