--- a/index.html
+++ b/index.html
@@ -1153,8 +1153,10 @@ section h2 {
 
                       <li class="has-submenu">
      <a href="Interactive.html" onclick="return handleSubmenuClick(event, this)">Отзывы о сайте</a>
-            <ul class="submenu">          
-</ul>          
+            <ul class="submenu">   
+            <li><a href="contacts.html#feedback-form">Форма обратной связи</a></li> 
+       </ul>  
+        </li>                  
             </div>
         </nav>
     </header>
@@ -1929,6 +1931,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
