--- a/index.html
+++ b/index.html
@@ -1154,7 +1154,7 @@ section h2 {
                       <li class="has-submenu">
      <a href="Interactive.html" onclick="return handleSubmenuClick(event, this)">Отзывы о сайте</a>
             <ul class="submenu">   
-            <li><a href="contacts.html#feedback-form">Форма обратной связи</a></li> 
+            <li><a href="Interactive.html">Ваше мнение может улучшить сайт</a></li> 
        </ul>  
         </li>                  
             </div>
@@ -1931,6 +1931,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
