--- a/index.html
+++ b/index.html
@@ -1152,9 +1152,9 @@ section h2 {
 </li>
 
                       <li class="has-submenu">
-     <a href="Interactive.html" onclick="return handleSubmenuClick(event, this)">Отзывы о сайте</a>
+     <a href="interactive.html" onclick="return handleSubmenuClick(event, this)">Отзывы о сайте</a>
             <ul class="submenu">   
-            <li><a href="Interactive.html">Ваше мнение может улучшить сайт</a></li> 
+            <li><a href="interactive.html">Ваше мнение может улучшить сайт</a></li> 
        </ul>  
         </li>                  
             </div>
@@ -1931,6 +1931,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
