--- a/interactive.html
+++ b/interactive.html
@@ -523,10 +523,10 @@
         // НАСТРОЙКИ EMAILJS - ЗАМЕНИТЕ ЗНАЧЕНИЯ!
         // ===========================================
         const EMAILJS_CONFIG = {
-            SERVICE_ID: 'YOUR_SERVICE_ID',      // ← Замените на ваш Service ID
-            TEMPLATE_ID: 'YOUR_TEMPLATE_ID',    // ← Замените на ваш Template ID
-            PUBLIC_KEY: 'YOUR_PUBLIC_KEY',      // ← Замените на ваш Public Key
-            ENABLED: false  // ← Измените на true после настройки EmailJS
+            SERVICE_ID: 'service_hropd5d',      // ← Замените на ваш Service ID
+            TEMPLATE_ID: 'template_09jp9tb',    // ← Замените на ваш Template ID
+            PUBLIC_KEY: 'mi7B9cfIzCbiwKLLv',      // ← Замените на ваш Public Key
+            ENABLED: true  // ← Измените на true после настройки EmailJS
         };
 
         // Открыть модальное окно
@@ -768,4 +768,5 @@
         console.log('%cclearAllFeedbacks()    - Удалить все отзывы', 'font-family: monospace; font-size: 13px;');
     </script>
 </body>
+
 </html>
