--- a/feedback.html
+++ b/feedback.html
@@ -865,7 +865,7 @@
             <!-- INFO BLOCK -->
             <div class="info-block">
                 <strong>📧 Куда отправляется ваш отзыв?</strong>
-                Сообщение будет отправлено напрямую на email преподавателя: <strong>ademin1977@vk.com</strong>. 
+                Сообщение будет отправлено напрямую на email преподавателя: <strong>ademin1977@vk.com</strong> 
                 Если вы укажете свой email, получите копию отзыва на него.
             </div>
 
