--- a/interactive.html
+++ b/interactive.html
@@ -799,7 +799,7 @@
                     </li>
 
                     <li class="has-submenu">
-                        <a href="parents.html" class="active" onclick="return handleSubmenuClick(event, this)">Родителям</a>
+                        <a href="parents.html" onclick="return handleSubmenuClick(event, this)">Родителям</a>
                         <ul class="submenu">
                             <li><a href="help-at-home">Как помочь ребёнку дома</a></li>
                             <li><a href="training-camps">Готовимся к учебным сборам</a></li>
@@ -818,6 +818,14 @@
                             <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
                         </ul>
                     </li>
+
+    <li class="has-submenu">
+     <a href="interactive.html" class="active" onclick="return handleSubmenuClick(event, this)">Отзыв о сайте</a>
+            <ul class="submenu">   
+            <li><a href="interactive.html">Ваше мнение может улучшить сайт</a></li> 
+       </ul>  
+        </li>               
+                    
                 </ul>                        
             </div>
         </nav>
