--- a/interactive.html
+++ b/interactive.html
@@ -846,7 +846,7 @@
             <!-- SUCCESS MESSAGE -->
             <div class="success-message" id="successMessage">
                 <h3>✅ Спасибо за ваш отзыв!</h3>
-                <p>Ваше сообщение успешно отправлено на email: <strong><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="177673727a7e79262e202057617c3974787a">[email&#160;protected]</a></strong></p>
+                <p>Ваше сообщение успешно отправлено на email: <strong><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="177673727a7e79262e202057617c3974787a">ademin1977@vk.com</a></strong></p>
                 <p style="margin-top: 10px;">Копия отправлена на ваш email (если указали)</p>
             </div>
 
@@ -866,7 +866,7 @@
             <!-- INFO BLOCK -->
             <div class="info-block">
                 <strong>📧 Куда отправляется ваш отзыв?</strong>
-                Сообщение будет отправлено напрямую на email преподавателя: <strong><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="761712131b1f18474f414136001d5815191b">[email&#160;protected]</a></strong>. 
+                Сообщение будет отправлено напрямую на email преподавателя: <strong>ademin1977@vk.com</strong>. 
                 Если вы укажете свой email, получите копию отзыва на него.
             </div>
 
