--- a/interactive.html
+++ b/interactive.html
@@ -1171,6 +1171,26 @@
         });
 
         // ===========================================
+        // QR-КОД МОДАЛЬНОЕ ОКНО
+        // ===========================================
+        function openQRModal() {
+            document.getElementById('qr-modal').style.display = 'flex';
+            document.body.classList.add('modal-open');
+        }
+
+        function closeQRModal() {
+            document.getElementById('qr-modal').style.display = 'none';
+            document.body.classList.remove('modal-open');
+        }
+
+        // Закрытие по клавише Escape (включая QR)
+        document.addEventListener('keydown', function(event) {
+            if (event.key === 'Escape') {
+                closeQRModal();
+            }
+        });
+        
+        // ===========================================
         // НАСТРОЙКИ EMAILJS
         // ===========================================
         const EMAILJS_CONFIG = {
@@ -1391,4 +1411,5 @@
         console.log('%cclearAllFeedbacks()    → Удалить все отзывы', 'font-size: 13px; color: #E53935;');
     </script>
 </body>
+
 </html>
