--- a/about.html
+++ b/about.html
@@ -689,7 +689,7 @@ document.addEventListener('keydown', function(event) {
 </li>
 
     <li class="has-submenu">
-                        <a href="interactive.html" class="active" onclick="return handleSubmenuClick(event, this)">💬 Отзыв о сайте</a>
+                        <a href="interactive.html" onclick="return handleSubmenuClick(event, this)">💬 Отзыв о сайте</a>
                         <ul class="submenu">   
                             <li><a href="interactive.html">Оставить отзыв о работе сайта</a></li> 
                         </ul>  
@@ -1489,6 +1489,7 @@ window.addEventListener('load', () => {
     
 </body>
 </html>
+
 
 
 
