--- a/ai-dlya-kolleg.html
+++ b/ai-dlya-kolleg.html
@@ -888,7 +888,7 @@
                     </li>
 
                    <li class="has-submenu">
-                        <a href="interactive.html" class="active" onclick="return handleSubmenuClick(event, this)">💬 Отзыв о сайте</a>
+                        <a href="interactive.html" onclick="return handleSubmenuClick(event, this)">💬 Отзыв о сайте</a>
                         <ul class="submenu">   
                             <li><a href="interactive.html">Оставить отзыв о работе сайта</a></li> 
                         </ul>  
@@ -1585,3 +1585,4 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
