--- a/ai-dlya-uchenikov.html
+++ b/ai-dlya-uchenikov.html
@@ -661,7 +661,7 @@
                         </ul>
                     </li>
                     <li class="has-submenu">
-                        <a href="interactive.html" class="active" onclick="return handleSubmenuClick(event, this)">💬 Отзыв о сайте</a>
+                        <a href="interactive.html" onclick="return handleSubmenuClick(event, this)">💬 Отзыв о сайте</a>
                         <ul class="submenu">   
                             <li><a href="interactive.html">Оставить отзыв о работе сайта</a></li> 
                         </ul>  
@@ -1577,3 +1577,4 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
