--- a/ai-projects.html
+++ b/ai-projects.html
@@ -762,7 +762,7 @@
     </ul>
 </li>
 <li class="has-submenu">
-                        <a href="interactive.html" class="active" onclick="return handleSubmenuClick(event, this)">💬 Отзыв о сайте</a>
+                        <a href="interactive.html" onclick="return handleSubmenuClick(event, this)">💬 Отзыв о сайте</a>
                         <ul class="submenu">   
                             <li><a href="interactive.html">Оставить отзыв о работе сайта</a></li> 
                         </ul>  
@@ -1592,6 +1592,7 @@ window.addEventListener('load', () => {
 
 
          
+
 
 
 
