--- a/index.html
+++ b/index.html
@@ -1150,13 +1150,14 @@ section h2 {
         <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
     </ul>
 </li>
-
-                      <li class="has-submenu">
-     <a href="interactive.html" onclick="return handleSubmenuClick(event, this)">Отзыв о сайте</a>
-            <ul class="submenu">   
-            <li><a href="interactive.html">Ваше мнение может улучшить сайт</a></li> 
-       </ul>  
-        </li>                  
+ <li class="has-submenu">
+                        <a href="interactive.html" onclick="return handleSubmenuClick(event, this)">💬 Отзыв о сайте</a>
+                        <ul class="submenu">   
+                            <li><a href="interactive.html">Оставить отзыв о работе сайта</a></li> 
+                        </ul>  
+                    </li>
+                </ul>     
+                    
             </div>
         </nav>
     </header>
@@ -1931,6 +1932,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
