--- a/portfolio.html
+++ b/portfolio.html
@@ -845,11 +845,11 @@
                   Разработанные программы и материалы, участие в профессиональных мероприятиях.
                 </p>
                 <ul>
-                    <li>Рабочие программы по ОБЗР для 8-11 классов</li>
-                    <li>Методические разработки уроков по ОБЗР</li>
-                    <li>Проведённые мастер-классы для коллег</li>
+                    <li>Участие в РМО учителей ОБЗР</li>
+                    <li>Информация об открытых уроках по ОБЗР</li>
+                    <li>Публикации на образовательных платформах</li>
                 </ul>
-                <a href="detalnaya-stranica-4.html" class="info-block-button">Подробнее</a>
+                <a href="metodicheskaya-aktivnost.html" class="info-block-button">Подробнее</a>
             </div>
 
 
@@ -1526,4 +1526,5 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
