--- a/portfolio.html
+++ b/portfolio.html
@@ -724,7 +724,7 @@
                             <li><a href="rezultaty-obucheniya">Результаты освоения ОБЗР обучающимися</a></li>
                             <li><a href="dostizheniya-uchenikov">Достижения учащихся</a></li>
                             <li><a href="metodicheskaya-aktivnost">Методическая активность</a></li>
-                            <li><a href="dokumenty">Документы портфолио</a></li>
+                            <li><a href="documents">Документы портфолио</a></li>
                         </ul>
                     </li>
 
@@ -931,7 +931,7 @@
                 </div>
             </div>
             
-            <a href="detalnaya-stranica-1.html" class="info-block-button" style="display: inline-block; margin-top: 1.5rem;">
+            <a href="documents.html" class="info-block-button" style="display: inline-block; margin-top: 1.5rem;">
                 Подробнее
             </a>
         </div>
@@ -1526,5 +1526,6 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
