--- a/metodicheskaya-aktivnost.html
+++ b/metodicheskaya-aktivnost.html
@@ -728,7 +728,7 @@
         <div class="activity-card">
             <h3><span class="activity-icon">👥</span> Участие в РМО учителей ОБЗР</h3>
             <p>
-                Регулярное участие в районных методических объединениях учителей-организаторов ОБЗР Лысковского района. 
+                Регулярное участие в районных методических объединениях учителей-организаторов ОБЗР Лысковского муниципального округа. 
                 Обмен опытом, обсуждение актуальных вопросов преподавания, изучение новых методик и подходов к обучению.
             </p>
             <ul class="activity-list">
@@ -743,13 +743,12 @@
         <div class="activity-card">
             <h3><span class="activity-icon">🎓</span> Проведение открытых уроков</h3>
             <p>
-                Демонстрация авторских методик и современных образовательных технологий для коллег и студентов педагогических вузов. 
-                Открытые уроки проводятся в рамках РМО, курсов повышения квалификации и аттестационных мероприятий.
+                Демонстрация авторских методик и современных образовательных технологий для коллег. 
+                Открытые уроки проводятся в рамках внутришкольной учебной деятельности, РМО, курсов повышения квалификации и аттестационных мероприятий.
             </p>
             <ul class="activity-list">
                 <li>Открытые уроки по модулям ОБЗР с демонстрацией практических навыков</li>
                 <li>Мастер-классы по использованию интерактивных технологий в преподавании</li>
-                <li>Показательные занятия по организации проектной деятельности учащихся</li>
                 <li>Демонстрация методов интеграции ИИ-инструментов в образовательный процесс</li>
             </ul>
             
@@ -773,17 +772,15 @@
 
         <!-- Инфоурок -->
         <div class="activity-card">
-            <h3><span class="activity-icon">📄</span> Публикации на образовательной платформе «Инфоурок»</h3>
+            <h3><span class="activity-icon">📄</span> Публикации на цифровых образовательных платформах</h3>
             <p>
-                Размещение авторских рабочих программ, методических разработок и учебных материалов на крупнейшей образовательной платформе России. 
+                Размещение авторских рабочих программ, методических разработок и учебных материалов на крупнейших образовательных платформах России. 
                 Все публикации подтверждены сертификатами о размещении материалов.
             </p>
             <ul class="activity-list">
-                <li>Рабочие программы по ОБЗР для 8-11 классов в соответствии с ФГОС</li>
-                <li>Календарно-тематическое планирование по всем модулям курса</li>
-                <li>Конспекты уроков с подробными методическими рекомендациями</li>
-                <li>Контрольно-измерительные материалы и тесты для проверки знаний</li>
-                <li>Материалы для организации учебно-полевых сборов</li>
+                <li>Рабочие программы по ОБЗР для 8-9 классов в соответствии с ФГОС</li>
+                <li>Рабочие программы по ОБЗР для 10-11 классов в соответствии с ФГОС</li>
+                <li>Рабочие программы юнармейского отряда в соответствии с ФГОС</li>
             </ul>
             <p style="margin-top: 1rem; color: var(--color-text-secondary); font-style: italic;">
                 📜 Все публикации сопровождаются официальными сертификатами образовательной платформы «Инфоурок», подтверждающими авторство и качество материалов
@@ -818,7 +815,7 @@
                                 background: white;"
                          onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 20px rgba(0, 61, 122, 0.25)';"
                          onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 12px rgba(0, 0, 0, 0.15)';">
-                        <img src="certificates/infourok-cert-1.jpg" 
+                        <img src="images/portfolio/infourok-cert-1.jpg" 
                              alt="Сертификат публикации 1" 
                              style="width: 100%; 
                                     height: 250px; 
@@ -829,7 +826,7 @@
                                       font-size: 0.9rem; 
                                       color: var(--color-primary);
                                       font-weight: 600;">
-                                Рабочая программа ОБЗР 8-11 кл.
+                                Рабочая программа ОБЗР 8-9 кл.
                             </p>
                         </div>
                     </div>
@@ -844,7 +841,7 @@
                                 background: white;"
                          onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 20px rgba(0, 61, 122, 0.25)';"
                          onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 12px rgba(0, 0, 0, 0.15)';">
-                        <img src="certificates/infourok-cert-2.jpg" 
+                        <img src="images/portfolio/infourok-cert-2.jpg" 
                              alt="Сертификат публикации 2" 
                              style="width: 100%; 
                                     height: 250px; 
@@ -855,7 +852,7 @@
                                       font-size: 0.9rem; 
                                       color: var(--color-primary);
                                       font-weight: 600;">
-                                КТП по модулям ОБЗР
+                               Рабочая программа ОБЗР 10-11 кл.
                             </p>
                         </div>
                     </div>
@@ -881,7 +878,7 @@
                                       font-size: 0.9rem; 
                                       color: var(--color-primary);
                                       font-weight: 600;">
-                                Методические разработки уроков
+                                  Рабочая программа юнармейского отряда
                             </p>
                         </div>
                     </div>
@@ -900,17 +897,17 @@
         <div class="books-highlight">
             <h3>
                 <span style="font-size: 3rem; filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.2));">📚</span>
-                Авторские книги по ОБЗР, созданные с помощью ИИ
+                Авторские книги по тематике ОБЗР, созданные с помощью ИИ
             </h3>
             <p>
-                Разработаны и опубликованы учебные пособия по курсу ОБЗР для учащихся 8-11 классов, созданные с использованием современных ИИ-технологий. 
-                Книги охватывают все 11 модулей программы и содержат теоретический материал, практические задания, иллюстрации и методические рекомендации.
+                Розработаны и представлены на сайте ходожественное произведение и учебное пособие по цифровой безопасности для учащихся 1-7 классов, созданные с использованием современных ИИ-технологий. 
+                Книги охватывают основные темы безопасного взвимодействия детей и подростков с цифровой средой.
             </p>
             <p>
-                Материалы могут свободно использоваться коллегами-педагогами в учебном процессе как дополнительные учебные пособия, 
-                источники заданий для самостоятельной работы или справочные материалы для подготовки к урокам.
+                Материалы могут свободно использоваться коллегами-педагогами в учебном процессе как дополнительная литература, 
+                источники заданий для самостоятельной работы или справочные материалы для подготовки к урокам по вопросом безопасного использования современных технологий.
             </p>
-            <a href="ai-projects.html#ai-dlya-kolleg" class="books-button">Посмотреть книги и скачать</a>
+            <a href="literature-projects.html" class="books-button">Посмотреть книги и скачать</a>
         </div>
 
         <!-- БЛОК 5: Внеурочная деятельность -->
