--- a/metodicheskaya-aktivnost.html
+++ b/metodicheskaya-aktivnost.html
@@ -901,7 +901,7 @@
             </h3>
             <p>
                 Розработаны и представлены на сайте ходожественное произведение и учебное пособие по цифровой безопасности для учащихся 1-7 классов, созданные с использованием современных ИИ-технологий. 
-                Книги охватывают основные темы безопасного взвимодействия детей и подростков с цифровой средой.
+                Книги охватывают основные темы безопасного взаимодействия детей и подростков с цифровой средой.
             </p>
             <p>
                 Материалы могут свободно использоваться коллегами-педагогами в учебном процессе как дополнительная литература, 
@@ -974,7 +974,7 @@
                     Подробнее о деятельности
                 </a>
 
-                <a href="portfolio.html#achievements" 
+                <a href="dostizheniya-uchenikov.html" 
                    style="display: inline-flex;
                           align-items: center;
                           gap: 0.5rem;
