--- a/novosti.html
+++ b/novosti.html
@@ -964,16 +964,16 @@
             <!-- Анонс 1 -->
             <article class="news-card" data-category="announcement">
                 <div class="news-card-image">
-                    <span class="news-card-placeholder">🎯</span>
+                    <span class="news-card-placeholder">🏆</span>
                 </div>
                 <div class="news-card-content">
                     <div class="news-card-meta">
-                        <span class="news-card-date">📅 30 ноября 2025</span>
+                        <span class="news-card-date">📅 9-10 декабря 2025</span>
                         <span class="news-card-category" style="background: var(--color-danger);">Анонс</span>
                     </div>
-                    <h3 class="news-card-title">Региональный этап "Зарница 2.0" — 30 ноября</h3>
+                    <h3 class="news-card-title">Муниципальный этап ВсОШ по ОБЗР</h3>
                     <p class="news-card-excerpt">
-                        Наша команда примет участие в региональном финале военно-спортивной игры "Зарница 2.0". Место проведения: учебный полигон воинской части. Приглашаем болельщиков поддержать наших ребят!
+                        Победители и призёры школьного этапа ВсОШ по ОБЗР примут участе в муниципальном этапе, который будет проходить на базе СШ 3 г.Лысково
                     </p>
                     <div class="news-card-footer">
                         <a href="#" class="news-card-link">Подробнее</a>
@@ -984,16 +984,16 @@
             <!-- Анонс 2 -->
             <article class="news-card" data-category="announcement">
                 <div class="news-card-image">
-                    <span class="news-card-placeholder">🚒</span>
+                    <span class="news-card-placeholder">🎯</span>
                 </div>
                 <div class="news-card-content">
                     <div class="news-card-meta">
-                        <span class="news-card-date">📅 5 декабря 2025</span>
+                        <span class="news-card-date">📅 Январь 2026</span>
                         <span class="news-card-category" style="background: var(--color-danger);">Анонс</span>
                     </div>
-                    <h3 class="news-card-title">Открытый урок МЧС "Безопасность в зимний период"</h3>
+                    <h3 class="news-card-title">Прием новых кандидатов в школьный юнармейский отряд "Вымпел"</h3>
                     <p class="news-card-excerpt">
-                        Приглашаем учащихся 8-9 классов на открытый урок с сотрудниками МЧС. Темы: безопасность на льду, пожарная безопасность в новогодние праздники, действия при ЧС в зимнее время.
+                      Запущена и реализуется программа дополнительных занятий по подготовке кандидатов.
                     </p>
                     <div class="news-card-footer">
                         <a href="#" class="news-card-link">Подробнее</a>
@@ -1004,16 +1004,16 @@
             <!-- Анонс 3 -->
             <article class="news-card" data-category="announcement">
                 <div class="news-card-image">
-                    <span class="news-card-placeholder">🎖️</span>
+                    <span class="news-card-placeholder">⭐</span>
                 </div>
                 <div class="news-card-content">
                     <div class="news-card-meta">
-                        <span class="news-card-date">📅 10 декабря 2025</span>
+                        <span class="news-card-date">📅 Январь 2026</span>
                         <span class="news-card-category" style="background: var(--color-danger);">Анонс</span>
                     </div>
-                    <h3 class="news-card-title">День Героев Отечества — торжественная линейка</h3>
+                    <h3 class="news-card-title">Постановка старшекассников на воинский учет</h3>
                     <p class="news-card-excerpt">
-                        9 декабря в школе пройдёт торжественная линейка, посвящённая Дню Героев Отечества. В программе: возложение цветов к памятнику, встреча с ветеранами, викторина по истории России.
+                   Информация о сроках оформления и сдачи необходимых документов, порядке прохождения мероприятий по постановке на воинский учет. 
                     </p>
                     <div class="news-card-footer">
                         <a href="#" class="news-card-link">Подробнее</a>
