--- a/novosti.html
+++ b/novosti.html
@@ -857,22 +857,20 @@
             <!-- Новость 1 -->
             <article class="news-card" data-category="achievement">
                 <div class="news-card-image">
-                    <span class="news-card-placeholder">🏆</span>
-                    <!-- <img src="images/news/news1.jpg" alt="Победа в олимпиаде"> -->
+                    <span class="news-card-placeholder">💼</span>
+                    <!-- <img src="images/news/news1.jpg" alt="Участие в ММО учителей ОБЗР"> -->
                 </div>
                 <div class="news-card-content">
                     <div class="news-card-meta">
-                        <span class="news-card-date">📅 20 ноября 2025</span>
-                        <span class="news-card-category achievement">Достижения</span>
+                        <span class="news-card-date">📅 24 ноября 2025</span>
+                        <span class="news-card-category achievement">Мероприятия</span>
                     </div>
-                    <h3 class="news-card-title">Наши ученики заняли призовые места на областной олимпиаде по ОБЗР</h3>
+                    <h3 class="news-card-title">Состоялось очередное заседание ММО учителей ОБЗР</h3>
                     <p class="news-card-excerpt">
-                        Команда учащихся 10-11 классов показала отличные результаты на региональном этапе Всероссийской олимпиады школьников по основам безопасности и защиты Родины. Иван К. занял 2 место, Мария Л. — 3 место.
+                    Принял участие в очередном заседании ММО учителей ОБЗР, которое состоялось на базе СШ 5 г.Лысково. Обсуждались текущие вопросы реализации плана мероприятий на 2025-2026 учебный год,
+                        а также особенности подготовки и проведения муниципального этапа ВсОШ по ОБЗР. Вместе с коллегами обсудили все детали организации практического тура олимпиады 
+                        с учетом имеющейся материальной базы и опыта прошлых лет. Совещание прошло в конструктивной и дружественной обстановке.
                     </p>
-                    <div class="news-card-footer">
-                        <a href="#" class="news-card-link">Подробнее</a>
-                        <a href="https://example.com" target="_blank" class="news-card-external">Источник ↗</a>
-                    </div>
                 </div>
             </article>
 
@@ -1011,7 +1009,7 @@
                         <span class="news-card-date">📅 Январь 2026</span>
                         <span class="news-card-category" style="background: var(--color-danger);">Анонс</span>
                     </div>
-                    <h3 class="news-card-title">Постановка старшекассников на воинский учет</h3>
+                    <h3 class="news-card-title">Постановка старшеклассников на воинский учет</h3>
                     <p class="news-card-excerpt">
                    Информация о сроках оформления и сдачи необходимых документов, порядке прохождения мероприятий по постановке на воинский учет. 
                     </p>
