--- a/portfolio.html
+++ b/portfolio.html
@@ -845,7 +845,7 @@
                   Разработанные программы и материалы, участие в профессиональных мероприятиях.
                 </p>
                 <ul>
-                    <li>Участие в РМО учителей ОБЗР</li>
+                    <li>Участие в ММО учителей ОБЗР</li>
                     <li>Информация об открытых уроках по ОБЗР</li>
                     <li>Публикации на образовательных платформах</li>
                 </ul>
@@ -1526,6 +1526,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
