--- a/metodicheskaya-aktivnost.html
+++ b/metodicheskaya-aktivnost.html
@@ -724,15 +724,15 @@
             Участие в профессиональных мероприятиях, обмен опытом с коллегами и публикация авторских методических материалов
         </p>
 
-        <!-- РМО учителей ОБЗР -->
+        <!-- ММО учителей ОБЗР -->
         <div class="activity-card">
-            <h3><span class="activity-icon">👥</span> Участие в РМО учителей ОБЗР</h3>
+            <h3><span class="activity-icon">👨‍🏫</span> Участие в ММО учителей ОБЗР</h3>
             <p>
-                Регулярное участие в районных методических объединениях учителей-организаторов ОБЗР Лысковского муниципального округа. 
+                Регулярное участие в муниципальных методических объединениях учителей-организаторов ОБЗР Лысковского муниципального округа. 
                 Обмен опытом, обсуждение актуальных вопросов преподавания, изучение новых методик и подходов к обучению.
             </p>
             <ul class="activity-list">
-                <li>Выступления на заседаниях РМО с докладами по актуальным вопросам преподавания ОБЗР</li>
+                <li>Выступления на заседаниях ММО с докладами по актуальным вопросам преподавания ОБЗР</li>
                 <li>Участие в обсуждении федеральных рабочих программ и методических рекомендаций</li>
                 <li>Обмен опытом организации учебно-полевых сборов и внеурочной деятельности</li>
                 <li>Консультирование коллег по вопросам внедрения новых технологий в преподавание ОБЗР</li>
@@ -744,7 +744,7 @@
             <h3><span class="activity-icon">🎓</span> Проведение открытых уроков</h3>
             <p>
                 Демонстрация авторских методик и современных образовательных технологий для коллег. 
-                Открытые уроки проводятся в рамках внутришкольной учебной деятельности, РМО, курсов повышения квалификации и аттестационных мероприятий.
+                Открытые уроки проводятся в рамках внутришкольной учебной деятельности, ММО, курсов повышения квалификации и аттестационных мероприятий.
             </p>
             <ul class="activity-list">
                 <li>Открытые уроки по модулям ОБЗР с демонстрацией практических навыков</li>
@@ -913,7 +913,7 @@
         <!-- БЛОК 5: Внеурочная деятельность -->
         <div class="activity-card" style="border-left-color: #E53935; margin-top: 2rem;">
             <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 1.5rem;">
-                <span style="font-size: 2.5rem;">🎖️</span>
+                <span style="font-size: 2.5rem;">💥</span>
                 <h3 style="margin: 0; color: var(--color-primary);">Внеурочная деятельность</h3>
             </div>
             
