--- a/parents.html
+++ b/parents.html
@@ -971,7 +971,7 @@
                           display: flex;
                           flex-direction: column;
                           gap: 0.5rem;">
-                    <span style="font-size: 2rem;">🎖️</span>
+                    <span style="font-size: 2rem;">⭐</span>
                     <strong style="font-size: 1.2rem; display: block;">Минобороны России</strong>
                     <span style="font-size: 0.95rem; opacity: 0.9;">Военная подготовка, призыв, учебные сборы</span>
                 </a>
@@ -1648,3 +1648,4 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
