--- a/dostizheniya-uchenikov.html
+++ b/dostizheniya-uchenikov.html
@@ -1119,7 +1119,7 @@ main > .slider-btn,
             <div class="footer-section">
                 <h3>Контакты</h3>
                 <ul>
-                    <li>📧 Email: <a href="/cdn-cgi/l/email-protection#a6c7c2c3cbcfc8979f9191e6d0cd88c5c9cb"><span class="__cf_email__" data-cfemail="a6c7c2c3cbcfc8979f9191e6d0cd88c5c9cb">[email&#160;protected]</span></a></li>
+                    <li>📧 Email: <a href="/cdn-cgi/l/email-protection#a6c7c2c3cbcfc8979f9191e6d0cd88c5c9cb"><span class="__cf_email__" data-cfemail="a6c7c2c3cbcfc8979f9191e6d0cd88c5c9cb">ademin1977@vk.com</span></a></li>
                     <li>📍 МБОУ СШ № 2 г. Лысково</li>
                     <li>📞 Консультации: по согласованию</li>
                 </ul>
@@ -2132,6 +2132,7 @@ window.addEventListener('load', () => {
     
 </body>
 </html>
+
 
 
 
