--- a/documents.html
+++ b/documents.html
@@ -1609,9 +1609,9 @@
             <div class="footer-section">
                 <h3>Контакты</h3>
                 <ul>
-                    <li>📧 Email: <a href="/cdn-cgi/l/email-protection#731217161e1a1d424a44443305185d101c1e"><span class="__cf_email__" data-cfemail="e78683828a8e89d6ded0d0a7918cc984888a">[email&#160;protected]</span></a></li>
+                  <li>📧 Email: <a href="mailto:demin@school2.ru">ademin1977@vk.com</a></li>
                     <li>📍 МБОУ СШ № 2 г. Лысково</li>
-                    <li>📞 Консультации: по согласованию</li>
+                    <li>📞 Консультации: по согласованию</li>  
                 </ul>
             </div>
 
