--- a/portfolio.html
+++ b/portfolio.html
@@ -819,7 +819,7 @@
                     <li>Количество учащихся, прошедших сборы</li>
                     <li>Оценки по итогам практических испытаний</li>
                 </ul>
-                <a href="detalnaya-stranica-2.html" class="info-block-button">Подробнее</a>
+                <a href="rezultaty-obucheniya.html" class="info-block-button">Подробнее</a>
             </div> 
 
             <!-- БЛОК 2 (синий фон) -->
@@ -1526,6 +1526,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
