--- a/documents.html
+++ b/documents.html
@@ -369,19 +369,21 @@
             padding: 0 1rem;
         }
 
+      /* ЗАГОЛОВОК СТРАНИЦЫ */
         .page-title {
             font-size: 2.5rem;
             color: var(--color-primary);
-            margin-bottom: 0.5rem;
-            text-align: center;
+            margin-bottom: 1.5rem;
+            padding-bottom: 0.5rem;
+            border-bottom: 3px solid var(--color-danger);
         }
 
+        /* ПОДЗАГОЛОВОК СТРАНИЦЫ (опционально) */
         .page-subtitle {
             font-size: 1.1rem;
             color: var(--color-text-secondary);
-            text-align: center;
             margin-bottom: 2rem;
-            line-height: 1.6;
+            line-height: 1.5;
         }
 
         /* Информационный блок */
