--- a/documents.html
+++ b/documents.html
@@ -1855,7 +1855,7 @@
         </div>
   <div class="footer-bottom">
             <p>&copy; 2025 Дёмин Александр Юрьевич. Все права защищены.</p>
-            <p style="margin-top: 0.5rem; font-size: 0.85rem;">При создании некоторых материалов сайта использовались инструменты искусственного интеллекта (Claude AI, Perplexity AI, Suno AI и др.).<br>
+            <p style="margin-top: 0.5rem; font-size: 0.85rem;">При создании некоторых материалов сайта использовались инструменты искусственного интеллекта (Claude AI, Perplexity AI, Suno AI и др.)<br><br>
             Все материалы проверены и адаптированы в соответствии с требованиями ФГОС.</p>
         </div>
        
@@ -2070,15 +2070,21 @@
             menu.classList.toggle('active');
         }
 
-        function handleSubmenuClick(event, element) {
-            if (window.innerWidth <= 768) {
-                event.preventDefault();
-                const parent = element.parentElement;
-                parent.classList.toggle('open');
-                return false;
-            }
-            return true;
+     function handleSubmenuClick(event, element) {
+    if (window.innerWidth <= 768) {
+        // Проверяем, кликнули ли по стрелке
+        if (event.target.classList.contains('submenu-toggle')) {
+            event.preventDefault();
+            event.stopPropagation();
+            const parent = element.parentElement;
+            parent.classList.toggle('open');
+            return false;
         }
+        // Если клик НЕ по стрелке — разрешаем переход
+        return true;
+    }
+    return true;
+} 
 
         // Аккордеон
         function toggleAccordion(header) {
