--- a/rezultaty-obucheniya.html
+++ b/rezultaty-obucheniya.html
@@ -985,7 +985,7 @@
                 </li>
                 <li>
                     <span style="color: #9C27B0;">👥</span>
-                    <span>Общее количество учащихся: 2024 — <span id="conclusion2024">0</span>, 2025 — <span id="conclusion2025">0</span></span>
+                    <span>Общее количество учащихся: 2024 — <span id="conclusionStudents2024">0</span>, 2025 — <span id="conclusionStudents2025">0</span></span>
                 </li>
                 <li>
                     <span style="color: #FF9800;">🎯</span>
