--- a/interactive.html
+++ b/interactive.html
@@ -949,7 +949,7 @@
             <div class="footer-section">
                 <h3>Контакты</h3>
                 <ul>
-                    <li>📧 Email: <a href="/cdn-cgi/l/email-protection#1e7f7a7b7377702f2729295e6875307d7173"><span class="__cf_email__" data-cfemail="ed8c8988808483dcd4dadaad9b86c38e8280">[email&#160;protected]</span></a></li>
+                    <li>📧 Email: <a href="/cdn-cgi/l/email-protection#1e7f7a7b7377702f2729295e6875307d7173"><span class="__cf_email__" data-cfemail="ed8c8988808483dcd4dadaad9b86c38e8280">ademin1977@vk.com</span></a></li>
                     <li>📍 МБОУ СШ № 2 г. Лысково</li>
                     <li>📞 Консультации: по согласованию</li>
                 </ul>
@@ -1807,6 +1807,7 @@ window.addEventListener('load', () => {
 </body>
 </html>
         
+
 
 
 
