--- a/about.html
+++ b/about.html
@@ -623,10 +623,10 @@ document.addEventListener('keydown', function(event) {
     <li class="has-submenu">
         <a href="portfolio.html" onclick="return handleSubmenuClick(event, this)">Портфолио</a>
         <ul class="submenu">
-            <li><a href="portfolio.html#rezultaty-obucheniya">Результаты освоения ОБЗР обучающимися</a></li>
-            <li><a href="portfolio.html#dostizheniya-uchenikov">Достижения учащихся</a></li>
-            <li><a href="portfolio.html#metodicheskaya-aktivnost">Методическая активность</a></li>
-            <li><a href="portfolio.html#dokumenty">Документы портфолио</a></li>
+            <li><a href="rezultaty-obucheniya">Результаты освоения ОБЗР обучающимися</a></li>
+            <li><a href="dostizheniya-uchenikov">Достижения учащихся</a></li>
+            <li><a href="metodicheskaya-aktivnost">Методическая активность</a></li>
+            <li><a href="documents">Документы портфолио</a></li>
         </ul>
     </li>
 
@@ -1489,6 +1489,7 @@ window.addEventListener('load', () => {
     
 </body>
 </html>
+
 
 
 
