--- a/metodicheskaya-aktivnost.html
+++ b/metodicheskaya-aktivnost.html
@@ -628,8 +628,8 @@
                     <li class="has-submenu">
                         <a href="index.html" onclick="return handleSubmenuClick(event, this)">Главная</a>
                         <ul class="submenu">
-                            <li><a href="o-predmete-obzr.html">О предмете ОБЗР</a></li>
-                            <li><a href="novosti.html">Последние новости</a></li>
+                            <li><a href="o-predmete-obzr">О предмете ОБЗР</a></li>
+                            <li><a href="novosti">Последние новости</a></li>
                         </ul>
                     </li>
 
@@ -647,7 +647,7 @@
                         <ul class="submenu">
                             <li><a href="rezultaty-obucheniya">Результаты освоения ОБЗР обучающимися</a></li>
                             <li><a href="dostizheniya-uchenikov">Достижения учащихся</a></li>
-                            <li><a href="metodicheskaya-aktivnost.html">Методическая активность</a></li>
+                            <li><a href="metodicheskaya-aktivnost">Методическая активность</a></li>
                             <li><a href="dokumenty">Документы портфолио</a></li>
                         </ul>
                     </li>
@@ -667,7 +667,7 @@
                         <ul class="submenu">
                             <li><a href="ai-dlya-uchenikov">Для учеников - творческие проекты</a></li>
                             <li><a href="ai-dlya-roditelej">Для родителей - практические материалы</a></li>
-                            <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
+                            <li><a href="ai-dlya-kolleg">Для коллег - методические материалы</a></li>
                             <li><a href="ai-poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
                         </ul>
                     </li>
@@ -708,7 +708,7 @@
                     <li class="has-submenu">
                         <a href="interactive.html" onclick="return handleSubmenuClick(event, this)">💬 Отзыв о сайте</a>
                         <ul class="submenu">   
-                            <li><a href="interactive.html">Оставить отзыв о работе сайта</a></li> 
+                            <li><a href="interactive">Оставить отзыв о работе сайта</a></li> 
                         </ul>  
                     </li>
                 </ul>                         
@@ -1357,12 +1357,12 @@
         const certificates = [
             {
                 id: "certificate1",
-                src: "certificates/infourok-cert-1.jpg",
+                src: "images/portfolio/infourok-cert-1.jpg",
                 title: "Сертификат публикации: Рабочая программа ОБЗР 8-11 классы"
             },
             {
                 id: "certificate2",
-                src: "certificates/infourok-cert-2.jpg",
+                src: "images/portfolio/infourok-cert-2.jpg",
                 title: "Сертификат публикации: Календарно-тематическое планирование по модулям ОБЗР"
             },
             {
