--- a/dostizheniya-uchenikov.html
+++ b/dostizheniya-uchenikov.html
@@ -912,7 +912,7 @@ main > .slider-btn,
             <div class="slider-wrapper">
                 <img src="images/dostizheniya-uchenikov/olimpiada-2024-1.jpg" alt="Почетная грамота победителя олимпиады — Солдатова Арина, 11 класс" class="slider-image active">
                 <img src="images/dostizheniya-uchenikov/olimpiada-2024-2.jpg" alt="Почетная грамота победителя олимпиады — Воронкова Ева, 8 класс" class="slider-image">
-                <img src="images/dostizheniya-uchenikov/olimpiada-2024-3.jpg" alt="Почетная грамота призёра олимпиады — Киричкова Елизавета, 8 класс" class="slider-image">
+                <img src="images/dostizheniya-uchenikov/olimpiada-2024-3.png" alt="Почетная грамота призёра олимпиады — Киричкова Елизавета, 8 класс" class="slider-image">
                 <img src="images/dostizheniya-uchenikov/olimpiada-2024-4.jpg" alt="Почетная грамота призёра олимпиады — Нагорнова Антонина, 8 класс" class="slider-image">
          </div>
             
@@ -2165,6 +2165,7 @@ window.addEventListener('load', () => {
     
 </body>
 </html>
+
 
 
 
