--- a/documents.html
+++ b/documents.html
@@ -1150,7 +1150,7 @@
                     </li>
 
                     <li class="has-submenu">
-                        <a href="portfolio.html" onclick="return handleSubmenuClick(event, this)">Портфолио</a>
+                        <a href="portfolio.html" class="active" onclick="return handleSubmenuClick(event, this)">Портфолио</a>
                         <ul class="submenu">
                             <li><a href="rezultaty-obucheniya">Результаты освоения ОБЗР обучающимися</a></li>
                             <li><a href="dostizheniya-uchenikov">Достижения учащихся</a></li>
