--- a/o-predmete-obzr.html
+++ b/o-predmete-obzr.html
@@ -834,7 +834,7 @@
                             <li><a href="ai-dlya-uchenikov.html">Для учеников - творческие проекты</a></li>
                             <li><a href="ai-dlya-roditelej.html">Для родителей - практические материалы</a></li>
                             <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
-                            <li><a href="ai-resursy.html">Полезные ресурсы по ИИ в образовании</a></li>
+                            <li><a href="ai-projects.html#poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
                         </ul>
                     </li>
 
@@ -1778,5 +1778,6 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
