--- a/o-predmete-obzr.html
+++ b/o-predmete-obzr.html
@@ -824,6 +824,7 @@
                         <ul class="submenu">
                             <li><a href="normativnaya-dokumentaciya.html">Нормативная документация</a></li>
                             <li><a href="metodicheskaya-kopilka.html">Методическая копилка по модулям</a></li>
+                            <li><a href="prezentacii-testy">Презентации, наглядные материалы, тесты и контрольные</a></li>
                             <li><a href="metodicheskie-rekomendacii.html">Методические рекомендации для коллег</a></li>
                         </ul>
                     </li>
@@ -1778,6 +1779,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
