--- a/konspekty-urokov.html
+++ b/konspekty-urokov.html
@@ -1003,6 +1003,7 @@
                         <ul class="submenu">
                             <li><a href="normativnaya-dokumentaciya">Нормативная документация</a></li>
                             <li><a href="konspekty-urokov" style="font-weight: 700; color: var(--color-primary);">Конспекты уроков по модулям</a></li>
+                            <li><a href="prezentacii-testy">Презентации, наглядные материалы, тесты и контрольные</a></li>
                             <li><a href="metodicheskie-rekomendacii">Методические рекомендации для коллег</a></li>
                         </ul>
                     </li>
