--- a/contacts.html
+++ b/contacts.html
@@ -389,9 +389,9 @@ document.addEventListener('keydown', function(event) {
     <li class="has-submenu">
         <a href="about.html" onclick="return handleSubmenuClick(event, this)">О себе</a>
         <ul class="submenu">
-            <li><a href="about.html#obrazovanie">Образование</a></li>
-            <li><a href="about.html#perepodgotovka">Переподготовка и повышение квалификации</a></li>
-            <li><a href="about.html#nagrady">Награды и достижения</a></li>
+            <li><a href="obrazovanie">Образование</a></li>
+            <li><a href="perepodgotovka">Переподготовка и повышение квалификации</a></li>
+            <li><a href="nagrady">Награды и достижения</a></li>
         </ul>
     </li>
 
@@ -410,10 +410,10 @@ document.addEventListener('keydown', function(event) {
     <li class="has-submenu">
         <a href="metodika.html" onclick="return handleSubmenuClick(event, this)">Методика</a>
         <ul class="submenu">
-            <li><a href="metodika.html#normativnaya-dokumentaciya">Нормативная документация</a></li>
-            <li><a href="metodika.html#konspekty-urokov">Конспекты уроков по модулям</a></li>
-            <li><a href="metodika.html#prezentacii-testy">Презентации, наглядные материалы, тесты и контрольные</a></li>
-            <li><a href="metodika.html#metodicheskie-rekomendacii">Методические рекомендации для коллег</a></li>
+            <li><a href="normativnaya-dokumentaciya">Нормативная документация</a></li>
+            <li><a href="konspekty-urokov">Конспекты уроков по модулям</a></li>
+            <li><a href="prezentacii-testy">Презентации, наглядные материалы, тесты и контрольные</a></li>
+            <li><a href="metodicheskie-rekomendacii">Методические рекомендации для коллег</a></li>
         </ul>
     </li>
 
@@ -421,8 +421,8 @@ document.addEventListener('keydown', function(event) {
     <li class="has-submenu">
         <a href="ai-projects.html" onclick="return handleSubmenuClick(event, this)">ИИ в образовании</a>
         <ul class="submenu">
-            <li><a href="ai-projects.html#dlya-uchenikov">Для учеников - творческие проекты</a></li>
-            <li><a href="ai-projects.html#dlya-roditelej">Для родителей - практические материалы</a></li>
+            <li><a href="ai-dlya-uchenikov">Для учеников - творческие проекты</a></li>
+            <li><a href="ai-dlya-roditelej">Для родителей - практические материалы</a></li>
             <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
             <li><a href="ai-projects.html#poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
         </ul>
@@ -432,12 +432,12 @@ document.addEventListener('keydown', function(event) {
     <li class="has-submenu">
         <a href="vneurochnaya.html" onclick="return handleSubmenuClick(event, this)">Активности</a>
         <ul class="submenu">
-            <li><a href="vneurochnaya.html#yunarmiya">Юнармия</a></li>
-            <li><a href="vneurochnaya.html#yuid">ЮИД (Юные инспекторы движения)</a></li>
-            <li><a href="vneurochnaya.html#zarnica">Зарница 2.0</a></li>
-            <li><a href="vneurochnaya.html#olimpiady">Олимпиады по ОБЗР</a></li>
-            <li><a href="vneurochnaya.html#uchebno-polevye-sbory">Учебно-полевые сборы</a></li>
-            <li><a href="vneurochnaya.html#vzaimodejstvie">Взаимодействие с партнёрами</a></li>
+            <li><a href="yunarmiya">Юнармия</a></li>
+            <li><a href="yuid">ЮИД (Юные инспекторы движения)</a></li>
+            <li><a href="zarnica">Зарница 2.0</a></li>
+            <li><a href="olimpiady">Олимпиады по ОБЗР</a></li>
+            <li><a href="uchebno-polevye-sbory">Учебно-полевые сборы</a></li>
+            <li><a href="vzaimodejstvie">Взаимодействие с партнёрами</a></li>
         </ul>
     </li>
 
@@ -1196,6 +1196,7 @@ window.addEventListener('load', () => {
 </html>
 
    
+
 
 
 
