--- a/novosti.html
+++ b/novosti.html
@@ -302,7 +302,7 @@
         }
 
         .news-card-category.competition {
-            background: var(--color-danger);
+            background: var(--color-primary);
         }
 
         .news-card-title {
@@ -844,7 +844,7 @@
             <button class="filter-btn active" onclick="filterNews('all')">Все новости</button>
             <button class="filter-btn" onclick="filterNews('event')">Мероприятия</button>
             <button class="filter-btn" onclick="filterNews('achievement')">Достижения</button>
-            <button class="filter-btn" onclick="filterNews('competition')">Конкурсы</button>
+            <button class="filter-btn" onclick="filterNews('competition')">События</button>
             <button class="filter-btn announcements" onclick="filterNews('announcement')">📢 Анонсы предстоящих событий</button>
             <a href="mediaarhiv.html" class="filter-btn" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; border-color: #667eea; text-decoration: none; display: inline-flex; align-items: center; gap: 0.5rem;">
                📸 Медиаархив
@@ -855,7 +855,7 @@
         <div class="news-feed" id="newsFeed">
             
             <!-- Новость 1 -->
-            <article class="news-card" data-category="achievement">
+            <article class="news-card" data-category="event">
                 <div class="news-card-image">
                     <span class="news-card-placeholder">💼</span>
                     <!-- <img src="images/news/news1.jpg" alt="Участие в ММО учителей ОБЗР"> -->
@@ -863,7 +863,7 @@
                 <div class="news-card-content">
                     <div class="news-card-meta">
                         <span class="news-card-date">📅 24 ноября 2025</span>
-                        <span class="news-card-category achievement">Мероприятия</span>
+                        <span class="news-card-category event">Мероприятия</span>
                     </div>
                     <h3 class="news-card-title">Состоялось очередное заседание ММО учителей ОБЗР</h3>
                     <p class="news-card-excerpt">
@@ -877,11 +877,11 @@
             <!-- Новость 2 -->
             <article class="news-card" data-category="event">
                 <div class="news-card-image">
-                    <span class="news-card-placeholder">🎖️</span>
+                    <span class="news-card-placeholder">📸</span>
                 </div>
                 <div class="news-card-content">
                     <div class="news-card-meta">
-                        <span class="news-card-date">📅 15 ноября 2025</span>
+                        <span class="news-card-date">📅 28 октября 2025</span>
                         <span class="news-card-category event">Мероприятия</span>
                     </div>
                     <h3 class="news-card-title">Состоялись учебно-полевые сборы для учащихся 10 классов</h3>
