--- a/normativnaya-dokumentaciya.html
+++ b/normativnaya-dokumentaciya.html
@@ -837,7 +837,31 @@
                             <span>⬇️</span>
                         </a>
                     </div>
-                </div>
+
+  <!-- РАЗДЕЛИТЕЛЬ + ДОПОЛНИТЕЛЬНЫЕ ПРОГРАММЫ -->
+                    <div style="margin: 2rem 0 1.5rem 0; 
+                                border-top: 2px solid var(--color-border); 
+                                padding-top: 2rem;">
+                        <h4 style="color: var(--color-primary); 
+                                   font-size: 1.15rem; 
+                                   margin-bottom: 1.25rem; 
+                                   display: flex; 
+                                   align-items: center; 
+                                   gap: 0.5rem;">
+                            📚 Дополнительные программы
+                        </h4>
+                        
+                        <div class="document-item">
+                            <div class="document-info">
+                                <span class="document-icon">⭐</span>
+                                <span class="document-title">Дополнительная общеобразовательная общеразвивающая программа "Юнармия"</span>
+                            </div>
+                            <a href="documents/doop-yunarmiya-2025.pdf" class="download-link">
+                                <span>Скачать PDF</span>
+                                <span>⬇️</span>
+                            </a>
+                        </div>
+                    </div>
 
                 <!-- БЛОК 2: КТП -->
                 <div class="document-block">
