--- a/metodicheskaya-aktivnost.html
+++ b/metodicheskaya-aktivnost.html
@@ -706,7 +706,7 @@
                     </li>
 
                     <li class="has-submenu">
-                        <a href="interactive.html" onclick="return handleSubmenuClick(event, this)">💬 Отзыв о сайте</a>
+                        <a href="interactive" onclick="return handleSubmenuClick(event, this)">💬 Отзыв о сайте</a>
                         <ul class="submenu">   
                             <li><a href="interactive">Оставить отзыв о работе сайта</a></li> 
                         </ul>  
@@ -867,7 +867,7 @@
                                 background: white;"
                          onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 20px rgba(0, 61, 122, 0.25)';"
                          onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 12px rgba(0, 0, 0, 0.15)';">
-                        <img src="certificates/infourok-cert-3.jpg" 
+                        <img src="images/portfolio/infourok-cert-2.jpg" 
                              alt="Сертификат публикации 3" 
                              style="width: 100%; 
                                     height: 250px; 
