--- a/metodicheskaya-aktivnost.html
+++ b/metodicheskaya-aktivnost.html
@@ -780,7 +780,7 @@
             <ul class="activity-list">
                 <li>Рабочие программы по ОБЗР для 8-9 классов в соответствии с ФГОС</li>
                 <li>Рабочие программы по ОБЗР для 10-11 классов в соответствии с ФГОС</li>
-                <li>Рабочие программы юнармейского отряда в соответствии с ФГОС</li>
+                <li>Дополнительная программа "Юнармия" в соответствии с ФГОС</li>
             </ul>
             <p style="margin-top: 1rem; color: var(--color-text-secondary); font-style: italic;">
                 📜 Все публикации сопровождаются официальными сертификатами образовательной платформы «Инфоурок», подтверждающими авторство и качество материалов
@@ -867,7 +867,7 @@
                                 background: white;"
                          onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 20px rgba(0, 61, 122, 0.25)';"
                          onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 12px rgba(0, 0, 0, 0.15)';">
-                        <img src="images/portfolio/infourok-cert-2.jpg" 
+                        <img src="images/portfolio/infourok-cert-3.jpg" 
                              alt="Сертификат публикации 3" 
                              style="width: 100%; 
                                     height: 250px; 
@@ -878,7 +878,7 @@
                                       font-size: 0.9rem; 
                                       color: var(--color-primary);
                                       font-weight: 600;">
-                                  Рабочая программа юнармейского отряда
+                                  Дополнительная программа "Юнармия"
                             </p>
                         </div>
                     </div>
