--- a/metodicheskaya-aktivnost.html
+++ b/metodicheskaya-aktivnost.html
@@ -826,7 +826,8 @@
                                       font-size: 0.9rem; 
                                       color: var(--color-primary);
                                       font-weight: 600;">
-                                Рабочая программа ОБЗР 8-9 кл.
+                                Рабочая программа по ОБЗР <br>
+                                для 8-9 классов.
                             </p>
                         </div>
                     </div>
@@ -852,7 +853,8 @@
                                       font-size: 0.9rem; 
                                       color: var(--color-primary);
                                       font-weight: 600;">
-                               Рабочая программа ОБЗР 10-11 кл.
+                               Рабочая программа по ОБЗР <br> 
+                               для 10-11 классов.
                             </p>
                         </div>
                     </div>
