--- a/metodicheskaya-aktivnost.html
+++ b/metodicheskaya-aktivnost.html
@@ -1360,17 +1360,17 @@
             {
                 id: "certificate1",
                 src: "images/portfolio/infourok-cert-1.jpg",
-                title: "Сертификат публикации: Рабочая программа ОБЗР 8-11 классы"
+                title: "Сертификат публикации: Рабочая программа по ОБЗР для 8-9 классов"
             },
             {
                 id: "certificate2",
                 src: "images/portfolio/infourok-cert-2.jpg",
-                title: "Сертификат публикации: Календарно-тематическое планирование по модулям ОБЗР"
+                title: "Сертификат публикации: Рабочая программа по ОБЗР для 10-11 классов"
             },
             {
                 id: "certificate3",
                 src: "images/portfolio/infourok-cert-3.jpg",
-                title: "Сертификат публикации: Методические разработки уроков по ОБЗР"
+                title: "Сертификат публикации: Дополнительная программа "Юнармия""
             }
         ];
 
