--- a/novosti.html
+++ b/novosti.html
@@ -927,7 +927,7 @@
                 <div class="news-card-content">
                     <div class="news-card-meta">
                         <span class="news-card-date">📅 28 октября 2025</span>
-                        <span class="news-card-category event">События</span>
+                        <span class="news-card-category competition">События</span>
                     </div>
                     <h3 class="news-card-title">Проведен фотомониторинг оборудования кабинета ОБЗР</h3>
                     
@@ -937,15 +937,15 @@
                     
                     <div class="news-card-full-text">
                         <p> В рамках реализации регионального проекта «Все лучшее детям» национального проекта «Молодежь и дети» 
-                        в 2025-2027 годах, а также в результате закупки нового оборудования в ходе проведения капитального ремонта школы 
-                        кабинет ОБЗР получил современное учебное оборудование.</p>
-                        <p>Обновленная материально-техническая база позволит повысить 
+                        в 2025-2027 годах, а также в ходе проведения капитального ремонта школы 
+                        кабинет ОБЗР получил современное учебное оборудование. Для документирования обновленной 
+                        материально-технической базы проведен фотомониторинг оснащения кабинета.</p>
+                        <p>Новое оборудование позволит повысить 
                         качество преподавания предмета и обеспечит практико-ориентированный подход к обучению. 
                         Подробный фото отчет в медиаархиве. </p>
                     </div>
                     <div class="news-card-footer">
                         <button class="news-toggle-btn" onclick="toggleNews(this)">Подробнее ▼</button>
-                        <a href="https://example.com" target="_blank" class="news-card-external">Источник ↗</a>
                     </div>
                 </div>
             </article>
