--- a/novosti.html
+++ b/novosti.html
@@ -951,22 +951,31 @@
             </article>
 
             <!-- Новость 3 -->
-            <article class="news-card" data-category="competition">
+            <article class="news-card" data-category="event">
                 <div class="news-card-image">
                     <span class="news-card-placeholder">🎯</span>
                 </div>
                 <div class="news-card-content">
                     <div class="news-card-meta">
-                        <span class="news-card-date">📅 10 ноября 2025</span>
-                        <span class="news-card-category competition">События</span>
+                        <span class="news-card-date">📅 23 октября 2025</span>
+                        <span class="news-card-category event">Мероприятия</span>
                     </div>
-                    <h3 class="news-card-title">Команда "Зарница 2.0" готовится к региональному финалу</h3>
+                    <h3 class="news-card-title">Урок пожарной безопасности в рамках операции "Жильё"</h3>
                     <p class="news-card-excerpt">
-                        Наша команда успешно прошла муниципальный этап военно-спортивной игры "Зарница 2.0" и получила путёвку на областной финал. Впереди напряжённые тренировки и новые вызовы. Желаем ребятам удачи!
+                      Сегодня в рамках пожарно-профилактической операции "Жильё" провел занятия...
                     </p>
+                     <div class="news-card-full-text">
+                        <p>Сегодня в рамках пожарно-профилактической операции "Жильё" провел занятия 
+                        в 8, 9 и 10 классах на тему "Как обращаться с огнём".</p>
+                        <p>Ребята активно разбирали типичные ситуации возникновения пожаров — от неосторожного обращения 
+                        с открытым огнем и электроприборами до рисков в быту, таких как оставленные без присмотра свечи 
+                        или короткие замыкания. Ученики повторили ключевые правила пожарной безопасности: 
+                        правильное использование огнетушителей, эвакуацию из здания, вызов экстренных служб (101 или 112) 
+                        и запрет на самостоятельные попытки тушения сильного огня.</p>
+                    </div>
                     <div class="news-card-footer">
                         <a href="#" class="news-card-link">Подробнее</a>
-                        <a href="https://example.com" target="_blank" class="news-card-external">Источник ↗</a>
+                        <a href="https://vk.com/wall-200588316_5207" target="_blank" class="news-card-external">Источник ↗</a>
                     </div>
                 </div>
             </article>
