Change placeholder icon in news card

--- a/novosti.html
+++ b/novosti.html
@@ -953,7 +953,7 @@
             <!-- Новость 3 -->
             <article class="news-card" data-category="event">
                 <div class="news-card-image">
-                    <span class="news-card-placeholder">🎯</span>
+                    <span class="news-card-placeholder">🚒</span>
                 </div>
                 <div class="news-card-content">
                     <div class="news-card-meta">
