--- a/novosti.html
+++ b/novosti.html
@@ -974,8 +974,8 @@
                         и запрет на самостоятельные попытки тушения сильного огня.</p>
                     </div>
                     <div class="news-card-footer">
-                        <a href="#" class="news-card-link">Подробнее</a>
-                        <a href="https://vk.com/wall-200588316_5207" target="_blank" class="news-card-external">Источник ↗</a>
+                         <button class="news-toggle-btn" onclick="toggleNews(this)">Подробнее ▼</button>
+                        <a href="https://vk.com/wall-200588316_5207" target="_blank" class="news-card-external">Эта новость в VK ↗</a>
                     </div>
                 </div>
             </article>
